--- a/src/component/generator/style.module.css
+++ b/src/component/generator/style.module.css
@@ -18,14 +18,16 @@
   border-radius: 5px;
   width: 75%;
   outline: none;
+  text-align: center;
 }
 .passwordContainer:disabled {
-  outline: none;
   border: none;
   background-color: aliceblue;
+  font-weight: 600;
 }
 .lengthInput {
   outline: none;
+  border: none;
   width: 40px;
   border-radius: 5px;
   background-color: aliceblue;
